# ElasticNodeMiddleware

./: .gitignore  BUILD.LUFA  BUILD.bazel  README.md  WORKSPACE  cnnProjectBlockRAM.bit  github.bzl  graph_MM.in  graph_controlmanager.in  graph_dynamicMM.in  graph_elasticNodeMiddlewareLib.in  graph_elasticNodeMiddleware_ConfigureFPGALib.in  graph_uartmanager.in  serial_echo.py
.devcontainer/: Dockerfile  Readme.md  devcontainer.json
.github/workflows/: main.yml
ElasticNodeMiddleware/: ElasticNodeMiddleware.h  ElasticNodeMiddlewareMonitoring.h  elasticNodeMiddleware.h  energyMonitoringInterface.h
app/: BUILD.bazel  LufaWriteIntegrationTest.c  blinkExample.c  blinkLufaExample.c  blinkUsartExample.c  configuration.c  configuration.h  main.c  main_dynamicMM.c  monitoringExample.c
app/dynamicMM/: BUILD.bazel  main_dynamicMM.c
app/examples/: BUILD.bazel  blinkLufaExample.c  blinkUartExample.c
app/setup/: BUILD.bazel
bitfiles/: dummy.bit  s15_p1.bit  s15_p2.bit  s25_p1.bit  s25_p2.bit  s50_p1.bit  s50_p2.bit  s6_p1.bit  s6_p2.bit
docs/: CloneGuide.md  Docker.md  ElasticNodeGettingStartedGuide.md  EnergyMonitoring.md  GettingStartedGuide.md  HowToGuide.md  InstallationGuide.md  WriteOwnProgramGuide.md  conf.py  doxy.conf  elasticNodeMiddleware.rst  index.rst  interruptManager.rst  reconfigure_multiboot.rst  requirements.txt  uart.rst  xmem.rst
elasticnodemiddleware/: BUILD.bazel  configuration_flash.h  configuration_flash_internal.h  elasticNodeMiddleware.h  elasticNodeMiddleware_internal.h  fpgaPins.h  fpgaRegisters.h  interruptManager.h  interrupt_manager.h  leds.h  leds_internal.h  lufa.h  reconfigure_multiboot.h  reconfigure_multiboot_avr.h  reconfigure_multiboot_internal.h  reconfigure_multiboot_internal_avr.h  registerAbstraction.h  xmem.h
lib/DynamicMemoryManagement/: BUILD.bazel  InputManagement.c  InputManagement.h  MemoryManagement.c  MemoryManagement.h  MemoryManagementDefintions.h  Task.c  Task.h  TaskDefinitions.c  TaskDefinitions.h  TaskGraphConfig.h  Task_Freed.c  Task_Freed.h  heaps.c  heaps.h  malloc_mw.c  malloc_mw.h  stack_depth.c  stack_depth.h
lib/configuration/: configuration.c  configuration.h
lib/configuration_new/: configuration.c  configuration.h
lib/controlmanager/: controlmanager.c  controlmanager.h
lib/debug/: debug.c  debug.h  debugUsb.c
lib/elasticNodeMiddleware/: elasticNodeMiddleware.c  elasticNodeMiddleware.h  elasticNodeMiddleware_internal.c  elasticNodeMiddleware_internal.h
lib/flash/: flash.c  flash.h
lib/flash_new/: flash.c  flash.h
lib/led/: led.h  (+1 more)
scripts/: Configuration.py  bitfileConfigs.py  fetch-bitfile.sh  flashBitfiles.py  portConfigs.py  serial_test.py  uploadBitfiles.py  uploadCnn.py  uploadDummy.py  uploadMultiConfigS15.py  uploadS15.py
src/: BUILD.bazel  configuration_flash.c  configuration_flash_internal.c  elasticNodeMiddleware.c  elasticNodeMiddleware_internal.c  interruptManager_avr.c  interrupt_manager_avr.c  leds.c  leds_internal.c  lufa.c  reconfigure_multiboot.c  reconfigure_multiboot_avr.c  reconfigure_multiboot_internal.c  reconfigure_multiboot_internal_avr.c  registerAbstraction.c  xmem.c
src/configuration/: configuration.c  configuration.h  configuration_internal.c  configuration_internal.h
src/controlmanager/: controlmanager.c  controlmanager.h  controlmanager_internal.c  controlmanager_internal.h
src/debug/: debug.c  debug.h  debugUsb.c
src/delay/: delay.h
src/elasticNodeMiddleware/: ElasticNodeMiddleware.c  elasticNodeMiddleware.c  elasticNodeMiddleware_internal.c  elasticNodeMiddleware_internal.h
src/elasticNodeMiddleware/configure/: elasticNodeMiddleware_configureFPGA.c
src/elasticNodeMiddlewareMonitoring/: ElasticNodeMiddlewareMonitoring.c
src/energyMonitoringInterface/: energyMonitoringInterface.c
src/flash/: flash.c  flash.h  flash_internal.c  flash_internal.h
src/interruptManager/: interruptManager.h  interruptManager_avr.c  interruptManager_avr_Mock.h
src/led/: led_mcu.c  led_mcu.h
src/pinDefinition/: fpgaPins.h  fpgaRegisters.h
src/reconfigure_multiboot_avr/: reconfigure_multiboot_avr.c  reconfigure_multiboot_avr.h  reconfigure_multiboot_internal_avr.c  reconfigure_multiboot_internal_avr.h
src/spi/: spi.c  spi.h  spi_internal.c  spi_internal.h
src/sub-system/: sub-system.c  sub-system.h
src/uart/: uart.c  uart.h  uart_internal.c  uart_internal.h
src/uart/circularBuffer/: circularBuffer.c  circularBuffer.h
src/xmem/: xmem.c  xmem.h
templates/: .gitignore  BUILD.bazel  WORKSPACE  appBUILD.bazel  appExamplesBUILD.bazel  bitfileConfigs.py  bitfilesConfigs.py  blinkExample.c  init.py  main.c  portConfigs.py  uploadBitfiles.py  user.bazelrc
test/: BUILD.bazel  Configuration.py  ElasticNodeMiddlewareMonitoring_Test.c  ElasticNodeMiddleware_Test.c  OLDBUILD.bazel  circularBuffer_Test.c  configuration_Test.c  configuration_flash_Test.c  configuration_internal_Test.c  controlmanager_Test.c  controlmanager_internal_Test.c  debugLUFA_Test.c  debugUART_Test.c  debugUsb_Test.c  debug_Test.c  elasticNodeMiddleware_Test.c  elasticNodeMiddleware_configureFPGA_Test.c  elasticNodeMiddleware_internal_Test.c  first_Test.c  flash_Test.c  flash_internal_Test.c  interrupt_manager_avr_Test.c  led_mcu_Test.c  leds_Test.c  reconfigure_multiboot_Test.c  reconfigure_multiboot_avr_Test.c  reconfigure_multiboot_internal_Test.c  reconfigure_multiboot_internal_avr_Test.c  registerAbstraction_Test.c  serial_test.py  spi_Test.c  spi_internal_Test.c  test_Integration.c  test_MatrixMultiplication.c  test_MemoryManagement.c  test_Task.c  test_dummy.py  test_lazy.c  uart_Test.c  uart_internal_Test.c  (+1 more)
test/dynamicMM/: BUILD.bazel  test_InputManagement.c  test_Integration.c  test_MemoryManagement.c
test/header_replacements/EmbeddedUtilities/: BitManipulation.h
test/header_replacements/PeripheralInterface/: LufaUsartImpl.h
test/integration/: BUILD.bazel  integrationTest_coldBoot.c  integrationTest_elasticNodeMiddleware.c  integrationTest_elasticNodeMiddleware_internal.c  integrationTest_fpgaPowerTest.c  integrationTest_reconfigure_multiboot_avr.c  integrationTest_xmem.c
(+31 files in other folders)
