load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

### <extern ###
cc_library(
    name = "BitmanipulationLib",
    visibility = ["//visibility:public"],
    deps = [
        "@EmbeddedUtilities//:BitManipulation",
    ],
)
### extern> ###

cc_library(
    name = "ElasticNodeMiddlewareLibHdr",
    hdrs = [
        "ElasticNodeMiddleware/ElasticNodeMiddleware.h",
        "ElasticNodeMiddleware/ElasticNodeMiddlewareMonitoring.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ElasticNodeMiddlewareLib",
    srcs = [
        "//src:elasticNodeMiddleware/ElasticNodeMiddleware.c",
    ],
    hdrs = [
        "ElasticNodeMiddleware/ElasticNodeMiddleware.h",
    ],
    copts = cpu_frequency_flag(),
    visibility = ["//visibility:public"],
    deps = [
        "//:BitmanipulationLib",
        "//src:RegisterDefinitionLibHdr",
        "//src:LedLib",
        "//src:XmemLib",
        "//src:Reconfigure_multiboot_avrLib",
        "//src:ElasticNodeMiddlewareInternalLib",
    ],
)

cc_library(
    name = "ElasticNodeMiddlewareDEBUGLib",
    srcs = [
        "//src:elasticNodeMiddleware/ElasticNodeMiddleware.c",
    ],
    hdrs = [
        "ElasticNodeMiddleware/ElasticNodeMiddleware.h",
    ],
    copts = cpu_frequency_flag() + ["-DDEBUG"],
    visibility = ["//visibility:public"],
    deps = [
        "//:BitmanipulationLib",
        "//src:RegisterDefinitionLibHdr",
        "//src:LedLib",
        "//src:XmemLib",
        "//src:ControlmanagerLib",
        "//src:Reconfigure_multiboot_avrLib",
        "//src:ElasticNodeMiddlewareInternalLib",
        "//src:DebugLufaLib"
    ],
)

cc_library(
    name = "ElasticNodeMiddlewareMonitoringLib",
    srcs = [
        "//src:elasticNodeMiddlewareMonitoring/ElasticNodeMiddlewareMonitoring.c",
    ],
    hdrs = [
        "ElasticNodeMiddleware/ElasticNodeMiddlewareMonitoring.h",
    ],
    copts = cpu_frequency_flag(),
    visibility = ["//visibility:public"],
)

### <python ###
py_library(
    name = "serial_test",
    srcs = ["scripts/serial_test.py"],
    visibility = ["//visibility:public"],
    deps = [
        "Configuration",
    ],
)

py_library(
    name = "Configuration",
    srcs = ["scripts/Configuration.py"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_binary(
    name = "uploadMultiConfigS15",
    srcs = ["scripts/uploadMultiConfigS15.py"],
    visibility = ["//visibility:public"],
    deps = [
        "bitfileConfigs",
        "portConfigs",
        "serial_test",
    ],
)

py_library(
    name = "portConfigs",
    srcs = ["scripts/portConfigs.py"],
    visibility = ["//visibility:public"],
    deps = [
        "Configuration",
    ],
)

py_library(
    name = "bitfileConfigs",
    srcs = ["scripts/bitfileConfigs.py"],
    visibility = ["//visibility:public"],
    deps = [
        "Configuration",
    ],
)
### python> ###
