load("@AvrToolchain//:helpers.bzl", "default_embedded_binaries", "default_embedded_binary")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

#default_embedded_binaries(
#    copts = cpu_frequency_flag(),
#    main_files = glob(["*.c"]),
#    deps = [
#    "//app/setup:Setup",
#   ],
#)

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
    uploader = "Avr_dude_upload_script",
    deps = [
        "//:BitmanipulationLib",
        "//:ConfigurationLib",
        "//:ElasticNodeMiddlewareLib",
        "//:Reconfigure_multibootLib",
        "//:XMemLib",
        "//app/setup:Setup",
        #"//:UartLib",
        #"//:DebugUartLib",
        "//:DebugLufaLib",
        "//:UartmanagerLib"
    ],
)

default_embedded_binary(
    name = "blinkUsartExample",
    srcs = ["blinkUsartExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "Avr_dude_upload_script",
    deps = [
        "//:BitmanipulationLib",
        "//:DebugUartLib",
        "//:UartLib",
    ]
)

default_embedded_binary(
    name = "blinkLufaExample",
    srcs = ["blinkLufaExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "Avr_dude_upload_script",
    deps = [
        "//:DebugLufaLib",
        "//:BitmanipulationLib",
    ]
)

genrule(
    name = "Avr_dude_upload_script",
    outs = ["upload.sh"],
    cmd = """echo "avrdude -c stk500 -p \$$1 -P /dev/ttyACM0 -D -V -U flash:w:\$$2:i -e" > $@""",
)
