load("@AvrToolchain//:helpers.bzl", "default_embedded_binaries", "default_embedded_binary")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

#default_embedded_binaries(
#    copts = cpu_frequency_flag(),
#    main_files = glob(["*.c"]),
#    deps = [
#    "//app/setup:Setup",
#   ],
#)

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:ElasticNodeMiddlewareLib",
    ],
)

default_embedded_binary(
    name = "mainDEBUG",
    srcs = ["main.c"],
    copts = cpu_frequency_flag() + ["-DDEBUG"],
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:ElasticNodeMiddlewareDEBUGLib",
    ],
)

default_embedded_binary(
    name = "blinkLufaExample",
    srcs = ["blinkLufaExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:DebugLufaLib",
        "//:ElasticNodeMiddlewareLib",
    ],
)

default_embedded_binary(
    name = "blinkExample",
    srcs = ["blinkExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:ElasticNodeMiddlewareLib",
    ],
)

default_embedded_binary(
    name = "monitoringExample",
    srcs = ["monitoringExample.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//:ElasticNodeMiddlewareLib",
        "//:EnergyMonitoringInterfaceLib",
    ],
)
